feat(#6): 자동 매칭 판정 로직 보강